# src/auth/auth.routes.ts
@@ -1,8 +1,12 @@
-import { Router } from "express";
+import { Router } from 'express'
+import { Authcontroller } from './auth.controller';
+import { validateResource } from '../middlewares';
+import { authSchema } from './auth.schema';
 
 const router = Router();
 
-router.post("/", )
+router.post("/", validateResource(authSchema), Authcontroller.login)
+router.post("/register", validateResource(authSchema), Authcontroller.register)
 
 
 export default router;
